--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,20 +11,67 @@
     <title>Admin Home</title>
   </head>
   <body>
+    
+    
+    <div class="container ">
     <h1>Legal High Quality Goods Incorporated</h1>
-    
-    <div class="container">
-    
-    	<h3>Admin Home</h3>
-    	<div>
-    		<a href="/home">Home</a>
-    		<a href="/product/products">Products</a>
-    		<a href="/admin/users">Users</a>
-    		<a href="/customer/saveUserForm">Create a Customer Account</a>
-    		<a href="/login">Log In</a>
-    		<a href="/logout">Log Out</a>
-    	</div>
-    
+    	
+    	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		  <!--<a class="navbar-brand" href="#">Navbar</a>-->
+	<!--  	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>-->
+		  <div class="collapse navbar-collapse" id="navbarNav">
+		    <ul class="navbar-nav">
+		      <li class="nav-item active">
+		        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="/product/products">Products</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="/admin/users">Users</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="/customer/saveUserForm" >Create Account</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="/login" >Log In</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="/logout" >Log Out</a>
+		      </li>
+		    </ul>
+		  </div>
+		</nav>
+		
+		<!--<img src="/images/phones.jpg" class="img-fluid" alt="Responsive image">
+			<img src="laptop.jpg" class="img-fluid" alt="Responsive image">
+			<img th:src="@{https://via.placeholder.com/150}"/>
+			<img th:src="@{laptop.jpg}"/>
+			<img th:src="@{images/laptop.jpg}"/>
+			<img th:src="@{templates/images/laptop.jpg}"/>
+			<img th:src="@{/thymeleafExample/src/main/resources/laptop.jpg}"/>
+			<img src="/thymeleafExample/src/main/resources/laptop.jpg"/>
+		-->
+		
+		
+		<div class="bg-white border">
+			<div><h3>Products</h3>
+			</div>
+			<div class="card-group">
+				  <div class="card" th:each="currentProduct : ${products}">
+				    <img src="https://via.placeholder.com/150" class="card-img-top" >
+				    <div class="card-body">
+				      <h5 class="card-title" th:text="${currentProduct.title}">Title</h5>
+				      <p class="card-text" th:text="${currentProduct.description}">Description</p>
+				      <p class="card-text" th:text="${currentProduct.price}">Price</p>
+				      <button type="button" class="btn btn-primary">Buy</button>
+				    </div>
+				  </div>
+			</div>
+		</div>
+    	
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
