Custom login and logout pages created

--- a/src/main/resources/templates/admin/viewProducts.html
+++ b/src/main/resources/templates/admin/viewProducts.html
@@ -14,7 +14,8 @@
     
     <div class="container">
 
-		<h3>Product CRUD</h3>
+		<h1>Product CRUD</h1>
+		<a href="/">Home</a>
 		<hr>
 	
 		<!-- Add a button -->
