--- a/src/main/resources/templates/admin/viewUsers.html
+++ b/src/main/resources/templates/admin/viewUsers.html
@@ -14,6 +14,8 @@
     
 	<div class="container">
 		<h1>Crud Users</h1>
+		<a href="/">Home</a>
+		<hr>
 		
 		<a th:href="@{/admin/saveUserForm}"
 			class="btn btn-primary btn-sm mb-3">
