--- a/src/main/resources/templates/usertest.html
+++ b/src/main/resources/templates/usertest.html
@@ -48,32 +48,11 @@
 		  </div>
 		</nav>
 		
-		<!--<img src="/images/phones.jpg" class="img-fluid" alt="Responsive image">
-			<img src="laptop.jpg" class="img-fluid" alt="Responsive image">
-			<img th:src="@{https://via.placeholder.com/150}"/>
-			<img th:src="@{laptop.jpg}"/>
-			<img th:src="@{images/laptop.jpg}"/>
-			<img th:src="@{templates/images/laptop.jpg}"/>
-			<img th:src="@{/thymeleafExample/src/main/resources/laptop.jpg}"/>
-			<img src="/thymeleafExample/src/main/resources/laptop.jpg"/>
-		-->
+	<p>
+		This page should be viewable by only Users and Admins
+	</p>
 		
 		
-		<div class="bg-white border">
-			<div><h3>Products</h3>
-			</div>
-			<div class="card-group">
-				  <div class="card" th:each="currentProduct : ${products}">
-				    <img src="https://via.placeholder.com/150" class="card-img-top" >
-				    <div class="card-body">
-				      <h5 class="card-title" th:text="${currentProduct.title}">Title</h5>
-				      <p class="card-text" th:text="${currentProduct.description}">Description</p>
-				      <p class="card-text" th:text="${currentProduct.price}">Price</p>
-				      <button type="button" class="btn btn-primary">Buy</button>
-				    </div>
-				  </div>
-			</div>
-		</div>
     	
     </div>
 
